<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PRG_PLCModbusRTU" Id="{81d112d8-0152-408a-8ebf-7d6260d05547}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_PLCModbusRTU
VAR
	fbStrAscConversion: FB_StrASCConversion;
	fbClockPulse: FB_ClockPulse; // 200ms pulse
	fbModbusMaster: ModbusRtuMasterV2_KL6x22B;
	sWriteErrorId: MODBUS_ERRORS;
	bBusyState: BOOL := FALSE;

	// Modbus properties
	mB_quantity_coils: WORD:=2;
	mB_quantity_regs: WORD:=20;
	mB_addr_bits: WORD:=00;
	mB_addr_regs: WORD:=40;

	
	// Holding register declaration
	aWriteValueRegs0: ARRAY[0..19] OF WORD;
	
	// Compressed form of coil registers
	wWriteValueBits: WORD; //BIT0|BIT1|XXXXXXXXX

	bExecuteClockPulse: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[fbClockPulse(bStart:= GVL.bExecuteWriteCoils, bExecute => bExecuteClockPulse);

// Convert STRING to ARRAY OF BYTE in ASCII TYPE
fbStrAscConversion(sText:=GVL.sInputFromHMI,aASCIIRes => aWriteValueRegs0);

// Convert Bit 0 and Bit 1 to WORD
wWriteValueBits := M_BoolWordConversion();

A_WriteCoils();
A_WriteRegs();]]></ST>
    </Implementation>
    <Action Name="A_WriteCoils" Id="{14d2f459-1a38-44ce-9670-d6112c8a11f9}">
      <Implementation>
        <ST><![CDATA[// Write coils
	fbModbusMaster.WriteMultipleCoils(
	UnitID:= 10, 
	Quantity:= mB_quantity_coils, 
	MBAddr:= mB_addr_bits, 
	cbLength:= SIZEOF(wWriteValueBits), 
	pMemoryAddr:= ADR(wWriteValueBits), 
	Execute:= bExecuteClockPulse, 
	Timeout:= T#2S, 
	BUSY=> bBusyState, 
	Error=> , 
	ErrorId=> sWriteErrorId, 
	cbRead=>
	);]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_WriteRegs" Id="{78dc695e-3384-49ed-9c44-571c14816ed2}">
      <Implementation>
        <ST><![CDATA[
// Write 1st register
	fbModbusMaster.WriteRegs(
	UnitID:= 10, 
	Quantity:= mB_quantity_regs, 
	MBAddr:= mB_addr_regs, 
	cbLength:= SIZEOF(aWriteValueRegs0), 
	pMemoryAddr:= ADR(aWriteValueRegs0), 
	Execute:= GVL.bExecuteWriteRegs0, 
	Timeout:= T#2S, 
	BUSY=> bBusyState, 
	Error=> , 
	ErrorId=> sWriteErrorId, 
	cbRead=>
	);]]></ST>
      </Implementation>
    </Action>
    <Method Name="M_BoolWordConversion" Id="{dc064289-8b52-4625-96d0-b796ff4b46dc}">
      <Declaration><![CDATA[METHOD M_BoolWordConversion : WORD
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF GVL.bModbusCoilBit0 THEN
	IF GVL.bModbusCoilBit1 THEN
		M_BoolWordConversion := 3;
	ELSE
		M_BoolWordConversion := 1;
	END_IF
ELSE
	IF GVL.bModbusCoilBit1 THEN
		M_BoolWordConversion := 2;
	ELSE
		M_BoolWordConversion := 0;
	END_IF
END_IF]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="PRG_PLCModbusRTU">
      <LineId Id="29" Count="6" />
      <LineId Id="51" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="66" Count="0" />
    </LineIds>
    <LineIds Name="PRG_PLCModbusRTU.A_WriteCoils">
      <LineId Id="2" Count="12" />
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="PRG_PLCModbusRTU.A_WriteRegs">
      <LineId Id="2" Count="13" />
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="PRG_PLCModbusRTU.M_BoolWordConversion">
      <LineId Id="6" Count="11" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>