<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PRG_SafetyLightCurtain" Id="{9fc58935-82cf-401e-98fd-fe4f9b763d73}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_SafetyLightCurtain
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[GVL.bSafeRedLedOutput := GVL.bSafeRedLedInput;
GVL.bSafeRestartSignal:=GVL.bSafeRestartSignalInput;]]></ST>
    </Implementation>
    <LineIds Name="PRG_SafetyLightCurtain">
      <LineId Id="5" Count="0" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>